--- a/views/coffee/favourites.ejs
+++ b/views/coffee/favourites.ejs
@@ -6,9 +6,10 @@
       <p>You don't have any favourites.</p>
     <%} %>
     <% coffees.forEach((coffee) => { %>
-  
+
+      <hr class="coffee-card-hr">
       <div class="coffee-card">
-        <hr class="coffee-card-hr">
+       
         <img class="coffee-user-icon" src="<%= coffee.user ? coffee.userAvatar : '/images/profile-user-svgrepo-com.svg' %>" referrerpolicy="no-referrer" alt="avatar">
 
         <div class="coffee-card-heading-wrapper">
@@ -31,13 +32,14 @@
         </div>
 
         <div class="coffee-card-image-wrapper"><img class="coffee-card-img" src="<%= coffee.imageUrl %>" alt="coffee image"></div>
-      <hr class="coffee-card-hr">
+      
         <div class="delete-favourite-form-wrapper">
           <form action="/coffee/favourites/<%= coffee._id %>?_method=DELETE" method="POST">
-            <button class="landing-btns" type="submit">Remove from favourites</button>
+            <button class="landing-btns delete-favourite-btn" type="submit">Remove from favourites</button>
           </form>
         </div>
       </div>
+      <hr class="coffee-card-hr">
     <% }) %>
   <% } else {%>
     <p><%=errorMsg%></p>
