--- a/views/coffee/show.ejs
+++ b/views/coffee/show.ejs
@@ -1,160 +1,192 @@
 <%- include('../partials/header') %>
 
-<div class="coffee-card">
-  <h4>Details</h4>
-  <hr>
-  <%if(locals.errorMsg){%>
-    <p><%=errorMsg%></p>
-    <%}%>
-  <img class="google-icon" src="<%= coffee.user ? coffee.userAvatar : '/images/profile-user-svgrepo-com.svg' %>" referrerpolicy="no-referrer" alt="avatar">
-  <h1><%= coffee.name %></h1>
-  <h2><%= coffee.roaster %></h2>&nbsp;|&nbsp;<h2>Roast date: <%= coffee.roastDate.toISOString().slice(0, 10) %></h2> 
-  <!-- formatted roastDate -->
-  <h4>Reviewed by: <%= coffee.user ? coffee.userName : 'anonymous' %></h4>
-  <p><%= coffee.initReview %></p>
-  <h3>Aroma: <%= coffee.aroma %> </h3><h3>Acidity: <%= coffee.acidity %></h3><h3>Body: <%= coffee.bodyRating %> </h3><h3>Balance: <%= coffee.balance %></h3><h3>Sweetness: <%= coffee.sweetness %></h3>
-  <% let total = coffee.aroma + coffee.acidity + coffee.bodyRating + coffee.balance + coffee.sweetness %>
-  <% total *= 4 %>
-  <h3>Overall: <%= total %> /100</h3>
 
-  <img class="coffee-img" src="<%= coffee.imageUrl %>" alt="coffee image">
-
-  <% if (user?._id.equals(coffee.user)) { %>
-    <form action="/coffee/<%= coffee._id %>?_method=DELETE" method="post">
-      <button type="submit">Delete your CoffeeDB entry</button>
-    </form>
-    <button class="edit-coffee-btn">Edit your CoffeeDB entry</button>
-</div>
-
-
-    <div class="edit-coffee-container hidden"> 
-      <form  class="edit-coffee-form" action="/coffee/<%=coffee._id%>?_method=PUT" method="post" enctype="multipart/form-data" autocomplete="off">
-      <h4>Add a roast</h4>
-      <hr>
-       <label for="name">Name: </label><input type="text" name="name" value="<%=coffee.name%>">
-       <label for="roaster">Roaster: </label><input type="text" value="<%=coffee.roaster%>" name="roaster">
-       <label for="roastDate">Roast Date: </label><input type="datetime-local" value="<%= roastDate %>" name="roastDate" />
-       <label for="aroma">Aroma: </label>
-       <select name="aroma">
-          <option value="1" <%= coffee.aroma === 1 ? 'selected' : '' %>>1</option>
-          <option value="2"<%= coffee.aroma === 2 ? 'selected' : '' %>>2</option>
-          <option value="3"<%= coffee.aroma === 3 ? 'selected' : '' %>>3</option>
-          <option value="4"<%= coffee.aroma === 4 ? 'selected' : '' %>>4</option>
-          <option value="5"<%= coffee.aroma === 5 ? 'selected' : '' %>>5</option>
-        </select>
-       <label for="acidity">Acidity: </label>
-       <select name="acidity">
-          <option value="1" <%= coffee.acidity === 1 ? 'selected' : '' %>>1</option>
-          <option value="2" <%= coffee.acidity === 2 ? 'selected' : '' %>>2</option>
-          <option value="3" <%= coffee.acidity === 3 ? 'selected' : '' %>>3</option>
-          <option value="4" <%= coffee.acidity === 4 ? 'selected' : '' %>>4</option>
-          <option value="5" <%= coffee.acidity === 5 ? 'selected' : '' %>>5</option>
-        </select>
-       <label for="bodyRating">Body: </label>
-       <select name="bodyRating">
-          <option value="1" <%= coffee.bodyRating === 1 ? 'selected' : '' %>>1</option>
-          <option value="2" <%= coffee.bodyRating === 2 ? 'selected' : '' %>>2</option>
-          <option value="3" <%= coffee.bodyRating === 3 ? 'selected' : '' %>>3</option>
-          <option value="4" <%= coffee.bodyRating === 4 ? 'selected' : '' %>>4</option>
-          <option value="5" <%= coffee.bodyRating === 5 ? 'selected' : '' %>>5</option>
-        </select>
-       <label for="balance">Balance: </label>
-       <select name="balance">
-         <option value="1" <%= coffee.balance === 1 ? 'selected' : '' %>>1</option>
-         <option value="2" <%= coffee.balance === 2 ? 'selected' : '' %>>2</option>
-         <option value="3" <%= coffee.balance === 3 ? 'selected' : '' %>>3</option>
-         <option value="4" <%= coffee.balance === 4 ? 'selected' : '' %>>4</option>
-         <option value="5" <%= coffee.balance === 5 ? 'selected' : '' %>>5</option>
-       </select>
+  <div class="show-coffee-wrapper">
+    <h1 class="show-heading">Details</h1>
+    <div class="coffee-card">
     
-       <label for="sweetness">Sweetness: </label>
-       <select name="sweetness">
-         <option value="1" <%= coffee.sweetness === 1 ? 'selected' : '' %>>1</option>
-         <option value="2" <%= coffee.sweetness === 2 ? 'selected' : '' %>>2</option>
-         <option value="3" <%= coffee.sweetness === 3 ? 'selected' : '' %>>3</option>
-         <option value="4" <%= coffee.sweetness === 4 ? 'selected' : '' %>>4</option>
-         <option value="5" <%= coffee.sweetness === 5 ? 'selected' : '' %>>5</option>
-       </select>
-        <hr>
-        <label for="review">Review: </label>
-        <textarea name="initReview" cols="80" rows="10"><%=coffee.initReview%></textarea>
-        <input type="file" name="image" id="imageUpload" accept="image/*">
-        <br>
-        <button class="landing-btns" type="submit">Save Changes</button>
-      </form>
-      <button class="cancel-edit-coffee-btn" type="button">Cancel</button></div>
-  <%}%>
-  <%if(user){%>
-  <form action="/coffee/favourites/<%=coffee._id%>" method="post">
-    <button type="submit" class="add-favourite-btn">Add to your favourites</button>
-  </form>
-  <%}%>
-</div>
-<hr>
-<h4>Reviews</h4>
-<hr>
-
-<%if(coffee.reviews.length){ %>
-    <% coffee.reviews.forEach((r,i) => { %>
-      <div class="review-card" data-idx="<%=i%>"> 
-        <label for="avatar"><%= r.userName %>
-           <img alt="avatar" src="<%= r.userAvatar %>" referrerpolicy="no-referrer">
-        </label>
-        <h2>Rating: <%= r.rating %> /5</h2>
-          <p><%= r.content %></p>
-      
-        <% if (user?._id.equals(r.user)) { %>
-            <form action="/review/<%= r._id %>?_method=DELETE" method="POST">
-            <button type="submit">Delete your review</button>
-          </form>
-          <button class="edit-review-btn" data-idx="<%=i%>">Edit your review</button>
+      <hr class="coffee-card-hr">
+      <%if(locals.errorMsg){%>
+        <p class="error-txt"><%=errorMsg%></p>
+        <%}%>
+      <img class="coffee-user-icon" src="<%= coffee.user ? coffee.userAvatar : '/images/profile-user-svgrepo-com.svg' %>" referrerpolicy="no-referrer" alt="avatar">
+      <div class="coffee-card-heading-wrapper">
+        <h1 class="coffee-card-name-heading"><%= coffee.name %></h1>
+        <h2 class="coffee-subheading"><%= coffee.roaster %></h2>&nbsp;|&nbsp;<h2>Roast date: <%= coffee.roastDate.toISOString().slice(0, 10) %></h2>
+        <h4 class="coffee-card-user">Reviewed by: <%= coffee.user ? coffee.userName : 'anonymous' %></h4>
       </div>
-          
-          <div class="edit-form-container hidden" data-idx="<%=i%>">
-            <form action="/review/<%=coffee._id %>/<%=r._id %>?_method=PUT" method="POST">
-              <label for="avatar"><%= r.userName %>
-                <img alt="avatar" src="<%= r.userAvatar %>" referrerpolicy="no-referrer">
-             </label>
-              <label>Edit your review:</label>
-              <label>Rating:</label>
-              <select name="rating">
-                <option value="1" <%= r.rating === 1 ? 'selected' : '' %>>1</option>
-                <option value="2" <%= r.rating === 2 ? 'selected' : '' %>>2</option>
-                <option value="3" <%= r.rating === 3 ? 'selected' : '' %>>3</option>
-                <option value="4" <%= r.rating === 4 ? 'selected' : '' %>>4</option>
-                <option value="5" <%= r.rating === 5 ? 'selected' : '' %>>5</option>
-              </select>
-              <textarea name="content" cols="80" rows="10"><%= r.content %></textarea>
-              <br><br>
-              <button type="submit">Update Review</button>
-            </form>
-            <button class="cancel-edit-btn" data-idx="<%=i%>" type="button">Cancel</button>
-          </div>
-        <% } %>
+      <div class="coffee-card-middle-column">
+        <p class="coffee-card-review"><img class="comma-icon" src="/images/comma-ish-glyph-svgrepo-com.svg" alt=""><br><%= coffee.initReview %></p>
+        <div class="scores-wrapper">
+          <h3 class="coffee-card-aroma">Aroma: <%= coffee.aroma %> </h3>
+          <h3 class="coffee-card-acidity">Acidity: <%= coffee.acidity %></h3>
+          <h3 class="coffee-card-body">Body: <%= coffee.bodyRating %> </h3>
+          <h3 class="coffee-card-balance">Balance: <%= coffee.balance %></h3>
+          <h3 class="coffee-card-sweetness">Sweetness: <%= coffee.sweetness %></h3>
+          <% let total = coffee.aroma + coffee.acidity + coffee.bodyRating + coffee.balance + coffee.sweetness %>
+          <% total *= 4 %>
+          <h3 class="coffee-card-overall">Overall: <%= total %> /100</h3>
+        </div>
+      </div>
+    
+      <div class="coffee-card-image-wrapper"><img class="coffee-card-img" src="<%= coffee.imageUrl %>" alt="coffee image"></div>
+    
+      <% if (user?._id.equals(coffee.user)) { %>
+        <form action="/coffee/<%= coffee._id %>?_method=DELETE" method="post">
+          <button type="submit">Delete your CoffeeDB entry</button>
+        </form>
+        <button class="edit-coffee-btn">Edit your CoffeeDB entry</button>
+    </div>
+    
+    
+        <div class="edit-coffee-container hidden">
+          <form  class="edit-coffee-form" action="/coffee/<%=coffee._id%>?_method=PUT" method="post" enctype="multipart/form-data" autocomplete="off">
+          <h4>Add a roast</h4>
+          <hr>
+           <label for="name">Name: </label><input type="text" name="name" value="<%=coffee.name%>">
+           <label for="roaster">Roaster: </label><input type="text" value="<%=coffee.roaster%>" name="roaster">
+           <label for="roastDate">Roast Date: </label><input type="datetime-local" value="<%= roastDate %>" name="roastDate" />
+           <label for="aroma">Aroma: </label>
+           <select name="aroma">
+              <option value="1" <%= coffee.aroma === 1 ? 'selected' : '' %>>1</option>
+              <option value="2"<%= coffee.aroma === 2 ? 'selected' : '' %>>2</option>
+              <option value="3"<%= coffee.aroma === 3 ? 'selected' : '' %>>3</option>
+              <option value="4"<%= coffee.aroma === 4 ? 'selected' : '' %>>4</option>
+              <option value="5"<%= coffee.aroma === 5 ? 'selected' : '' %>>5</option>
+            </select>
+           <label for="acidity">Acidity: </label>
+           <select name="acidity">
+              <option value="1" <%= coffee.acidity === 1 ? 'selected' : '' %>>1</option>
+              <option value="2" <%= coffee.acidity === 2 ? 'selected' : '' %>>2</option>
+              <option value="3" <%= coffee.acidity === 3 ? 'selected' : '' %>>3</option>
+              <option value="4" <%= coffee.acidity === 4 ? 'selected' : '' %>>4</option>
+              <option value="5" <%= coffee.acidity === 5 ? 'selected' : '' %>>5</option>
+            </select>
+           <label for="bodyRating">Body: </label>
+           <select name="bodyRating">
+              <option value="1" <%= coffee.bodyRating === 1 ? 'selected' : '' %>>1</option>
+              <option value="2" <%= coffee.bodyRating === 2 ? 'selected' : '' %>>2</option>
+              <option value="3" <%= coffee.bodyRating === 3 ? 'selected' : '' %>>3</option>
+              <option value="4" <%= coffee.bodyRating === 4 ? 'selected' : '' %>>4</option>
+              <option value="5" <%= coffee.bodyRating === 5 ? 'selected' : '' %>>5</option>
+            </select>
+           <label for="balance">Balance: </label>
+           <select name="balance">
+             <option value="1" <%= coffee.balance === 1 ? 'selected' : '' %>>1</option>
+             <option value="2" <%= coffee.balance === 2 ? 'selected' : '' %>>2</option>
+             <option value="3" <%= coffee.balance === 3 ? 'selected' : '' %>>3</option>
+             <option value="4" <%= coffee.balance === 4 ? 'selected' : '' %>>4</option>
+             <option value="5" <%= coffee.balance === 5 ? 'selected' : '' %>>5</option>
+           </select>
+    
+           <label for="sweetness">Sweetness: </label>
+           <select name="sweetness">
+             <option value="1" <%= coffee.sweetness === 1 ? 'selected' : '' %>>1</option>
+             <option value="2" <%= coffee.sweetness === 2 ? 'selected' : '' %>>2</option>
+             <option value="3" <%= coffee.sweetness === 3 ? 'selected' : '' %>>3</option>
+             <option value="4" <%= coffee.sweetness === 4 ? 'selected' : '' %>>4</option>
+             <option value="5" <%= coffee.sweetness === 5 ? 'selected' : '' %>>5</option>
+           </select>
+            <hr>
+            <label for="review">Review: </label>
+            <textarea name="initReview" cols="80" rows="10"><%=coffee.initReview%></textarea>
+            <input type="file" name="image" id="imageUpload" accept="image/*">
+            <br>
+            <button class="landing-btns" type="submit">Save Changes</button>
+          </form>
+          <button class="cancel-edit-coffee-btn" type="button">Cancel</button></div>
+           <%}%>
+             <%if(user){%>
+               <form action="/coffee/favourites/<%=coffee._id%>" method="post">
+                  <button type="submit" class="add-favourite-btn">Add to your favourites</button>
+               </form>
+      <%}%>
+         </div>
+         <h4 class="reviews-heading">Reviews</h4>
+         <hr class="review-hr">
+  <div class="reviews-wrapper">
       
-    <% }) %>
 
-    <%}%>
+      
+      <%if(coffee.reviews.length){ %>
+          <% coffee.reviews.forEach((r,i) => { %>
+          <div class="review-card" data-idx="<%=i%>">
 
-     <%if(user){%>
-     <form id="add-review-form" method="post"
-     action="/coffee/<%= coffee._id %>/reviews">
-     <label>Leave a review:</label>
-     <label>Rating:</label>
-     <select name="rating">
-       <option value="1">1</option>
-       <option value="2">2</option>
-       <option value="3">3</option>
-       <option value="4">4</option>
-       <option value="5" selected>5</option>
-     </select>
-     <textarea name="content" cols="80" rows="10"></textarea> <br><br>
-     <button class="landing-btns" type="submit" value="Add Review">Add Review</button> <br><br>
-   </form>
-<%}%>
-<%if(!user){%>
-  <h2>Log in to leave a review!</h2>
-<%}%>
+                 <div class="review-card-left-column">
+                   <img class="review-card-user-img" alt="avatar" src="<%= r.userAvatar %>" referrerpolicy="no-referrer">
+                   <h2 class="review-user-heading"><%= r.userName %></h2>
+                 </div>
+
+
+                  <div class="review-card-middle-column">
+                    <h2>Rating: <%= r.rating %> /5</h2>
+                    <p class="review-content"><img class="comma-icon" src="/images/comma-ish-glyph-svgrepo-com.svg" alt=""><br><%= r.content %></p>
+                  </div>
+      
+              <% if (user?._id.equals(r.user)) { %>
+                  <div class="review-button-row">
+                    <form action="/review/<%= r._id %>?_method=DELETE" method="POST">
+                       <button class="review-btn" type="submit">Delete your review</button>
+                    </form>
+                    <button class="edit-review-btn review-btn" data-idx="<%=i%>">Edit your review</button>
+                 </div>
+              <% } %>
+            </div>
+            <div class="edit-form-container hidden" data-idx="<%=i%>">
+              
+              <form class="edit-review-form-flex-container" action="/review/<%=coffee._id %>/<%=r._id %>?_method=PUT" method="POST">
+
+                <div class="edit-review-left-column">
+                  <img class="edit-review-user-img" alt="avatar" src="<%= r.userAvatar %>" referrerpolicy="no-referrer">
+                   <h2 class="edit-review-user-heading"><%= r.userName %></h2>
+                </div>
+                  
+                <div class="edit-review-middle-column">
+                  <label>Edit your review:</label>
+                  <label>Rating:</label>
+                  <select class="edit-review-select" name="rating">
+                    <option value="1" <%= r.rating === 1 ? 'selected' : '' %>>1</option>
+                    <option value="2" <%= r.rating === 2 ? 'selected' : '' %>>2</option>
+                    <option value="3" <%= r.rating === 3 ? 'selected' : '' %>>3</option>
+                    <option value="4" <%= r.rating === 4 ? 'selected' : '' %>>4</option>
+                    <option value="5" <%= r.rating === 5 ? 'selected' : '' %>>5</option>
+                  </select>
+                  <textarea name="content" cols="80" rows="10"><%= r.content %></textarea>
+                </div>
+               
+                <div class="edit-review-button-row">
+                  <button class="review-btn" type="submit">Update Review</button>
+                  <button class="cancel-edit-btn review-btn" data-idx="<%=i%>" type="button">Cancel</button>
+                </div>
+              </form>
+              
+            </div>
+          <% }) %>
+        
+          <%}%>
+      
+           <%if(user){%>
+           <form id="add-review-form" method="post"
+           action="/coffee/<%= coffee._id %>/reviews">
+           <label>Leave a review:</label>
+           <label>Rating:</label>
+           <select name="rating">
+             <option value="1">1</option>
+             <option value="2">2</option>
+             <option value="3">3</option>
+             <option value="4">4</option>
+             <option value="5" selected>5</option>
+           </select>
+           <textarea name="content" cols="80" rows="10"></textarea> <br><br>
+           <button class="landing-btns" type="submit" value="Add Review">Add Review</button> <br><br>
+         </form>
+      <%}%>
+      <%if(!user){%>
+        <h2>Log in to leave a review!</h2>
+      <%}%>
+    </div>
+  </div>
+
 
 
 <script>
@@ -174,16 +206,19 @@ const cancelEditCoffeeBtn = document.querySelector('.cancel-edit-coffee-btn');
 
 
 
- if(editCoffeeBtn){ 
-  editCoffeeBtn.addEventListener('click', handleEditCoffeeBtn);  
-  cancelEditCoffeeBtn.addEventListener('click', handleEditCoffeeBtn) }
+//  if(editCoffeeBtn){ 
+//   editCoffeeBtn.addEventListener('click', handleEditCoffeeBtn);  
+//   cancelEditCoffeeBtn.addEventListener('click', handleEditCoffeeBtn) }
 
 
 
- function handleEditCoffeeBtn(){
-   editCoffeeContainer.classList.toggle('hidden')
-   coffeeCard.classList.toggle('hidden')
- }
+//  function handleEditCoffeeBtn(){
+//    editCoffeeContainer.classList.toggle('hidden')
+//    coffeeCard.classList.toggle('hidden')
+//  }
+
+// reviews
+
 
  editReviewBtns.forEach((btn)=>{
   btn.addEventListener('click', handleEditBtn)
@@ -194,6 +229,9 @@ const cancelEditCoffeeBtn = document.querySelector('.cancel-edit-coffee-btn');
 
   const editFormTarget = editReviewForms.find(form => form.dataset.idx === e.target.dataset.idx);
   const reviewCardTarget = reviewCards.find(card => card.dataset.idx === e.target.dataset.idx);
+
+  console.log(editFormTarget)
+  console.log(reviewCardTarget)
   
   const showingForm = editReviewForms.find((form) => {
     let classList = [...form.classList];
@@ -226,6 +264,8 @@ const cancelEditCoffeeBtn = document.querySelector('.cancel-edit-coffee-btn');
  })
 
  function handleCancelBtn(e){
+
+  e.preventDefault();  
 
   const editFormTarget = editReviewForms.find(form => form.dataset.idx === e.target.dataset.idx);
   const reviewCardTarget = reviewCards.find(card => card.dataset.idx === e.target.dataset.idx);
